Firebase JSON/gradle implementation

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,10 @@ buildscript {
         mavenCentral()
     }
 
+    plugins {
+        id("com.android.application")
+        id("com.google.gms.google-services")
+    }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
